test/TestPhases/typechecker/invalid/intMissingType.blc
module intMissingType

function intMissingType()
    var a = -129
end
